2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Services.pm: Generalize do_lock(). It's now in Services and
	called lock_wait().

2005-04-26  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, PkgVersion.pm: Add new accessor get_epoch().

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm: Revamp update_db args, make cmd_index reject the
	cached infolist.

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: But they do invalidate the infolist cache.

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Changes to fink.conf should no longer invalidate the PDB
	cache.

2005-04-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: reverting vasi's path-prefix change of 4/25: we 
	don't want to force a default gcc after all

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm, SelfUpdate.pm: Fix up forget_packages().

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Have cmd_scanpackages() use apt-ftparchive with caching if it
	is available, for greatly sped-up scanpackages. Enable the fink.conf option
	AutoScanpackages, to automatically run scanpackages whenever a new .deb
	is built.

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: What the fark is ccc? oops!

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Move message to better place

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Use the g++ prefix for gcc as well.

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Retry load if files are missing

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Remove silly warning

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Make info-file-searching respect NoAutoIndex

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>
